--- a/web/sass/resetPwd.scss
+++ b/web/sass/resetPwd.scss
@@ -3,7 +3,7 @@
 @import "layout/common-simple";
 @import "layout/header-simple";
 @import "component/form";
-.main{
+.main-con{
 	width: 740px;
 }
 .main-resetPwd{
