--- a/src/Wenwen/FrontendBundle/Resources/views/Advertisement/_advShopActivity.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Advertisement/_advShopActivity.html.twig
@@ -32,4 +32,4 @@
 	</div>
 	{{ render(controller('JiliEmarBundle:Websites:hot' , { 'max': 5, 'tmpl': 'top' } ) ) }}{# 返利商城 #}
 </div>
-<div class="gameBanner"><a href="{{ path('wenwen_frontend_advertisement_game') }}"><img src="{{ asset('img/advertisement/chickBanner.jpg') }}" alt=""></a></div>
+<div class="gameBanner"><a href="{{ path('_game_chick') }}"><img src="{{ asset('img/advertisement/chickBanner.jpg') }}" alt=""></a></div>
