--- a/src/Wenwen/FrontendBundle/Resources/views/Advertisement/bangwoya.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Advertisement/bangwoya.html.twig
@@ -1,32 +1,30 @@
 {% extends 'WenwenFrontendBundle::base.html.twig' %}
-{% block title %}{{ parent()  }} Test {% endblock %}
+{% block title %}体验广告：{{ parent() }} {% endblock %}
 
 {% block stylesheet %}
 <link href="{{ asset('css/advertisement.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
 
-{% block javascript %}
-{% endblock %}
- 
 {% block header %}
 {% include 'WenwenFrontendBundle:Components:_header.html.twig' %} 
 {% endblock %}
 
 {% block body %}
-<div class="main">
-	<div class="main-con w1000">
-		{{ render(controller('JiliApiBundle:Top:market' ) ) }}{# 商家活动 #}
-		<div class="main-con-advertisement">
-			{% include 'WenwenFrontendBundle:Advertisement:_hallNavs.html.twig' %} 
-			<div class="tabCon">
-				<iframe src='http://www.bangwoya.com/91jili&u=1132938' style='width:980px; height:3500px;' scrolling='no' frameborder='no' border='0'></iframe>
-			</div>
+<div class="main-con w1000">
+	{{ render(controller('JiliApiBundle:Top:market' ) ) }}{# 商家活动 #}
+	<div class="main-con-advertisement">
+		{% include 'WenwenFrontendBundle:Advertisement:_hallNavs.html.twig' %} 
+		<div class="tabCon">
+			<iframe src='http://www.bangwoya.com/91jili&u=1132938' style='width:980px; height:3500px;' scrolling='no' frameborder='no' border='0'></iframe>
 		</div>
 	</div>
 </div>
-<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/advertisement/bangwoya')}}"></script>
 {% endblock %}
 
 {% block footer %}
 {% include 'WenwenFrontendBundle:Components:_footer.html.twig' %} 
+{% endblock %}
+
+{% block javascript %}
+<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/advertisement/bangwoya')}}"></script>
 {% endblock %}
