--- a/src/Wenwen/FrontendBundle/Resources/views/Advertisement/game.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Advertisement/game.html.twig
@@ -1,11 +1,8 @@
 {% extends 'WenwenFrontendBundle::base.html.twig' %}
-{% block title %}{{ parent()  }} Test {% endblock %}
+{% block title %}小鸡找米：{{ parent() }}{% endblock %}
 
 {% block stylesheet %}
 <link href="{{ asset('css/advertisement.css') }} " rel="stylesheet" type="text/css">
-{% endblock %}
-
-{% block javascript %}
 {% endblock %}
  
 {% block header %}
@@ -13,14 +10,15 @@
 {% endblock %}
 
 {% block body %}
-<div class="main">
-	<div class="main-con w1000 clearfix">
-		<iframe frameborder="0" width="1000" height="3500" scrolling="no" src="http://sugoroku01.cn.pag-asia.com/index.php?point_uid=96&nickname=clauzu&key=51ebb3b41f89310ad9827a03170be3a41fb69082"></iframe> 
-	</div>
+<div class="main-con w1000 clearfix">
+	<iframe frameborder="0" width="1000" height="3500" scrolling="no" src="http://sugoroku01.cn.pag-asia.com/index.php?point_uid=96&nickname=clauzu&key=51ebb3b41f89310ad9827a03170be3a41fb69082"></iframe> 
 </div>
-<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/advertisement/game')}}"></script>
 {% endblock %}
 
 {% block footer %}
 {% include 'WenwenFrontendBundle:Components:_footer.html.twig' %} 
+{% endblock %}
+
+{% block javascript %}
+<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/advertisement/game')}}"></script>
 {% endblock %}
