--- a/src/Wenwen/FrontendBundle/Resources/views/Advertisement/shopList.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Advertisement/shopList.html.twig
@@ -1,38 +1,36 @@
 {% extends 'WenwenFrontendBundle::base.html.twig' %}
-{% block title %}{{ parent()  }} Test {% endblock %}
+{% block title %}商家列表：{{ parent() }}{% endblock %}
 
 {% block stylesheet %}
 <link href="{{ asset('css/shopList.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
 
-{% block javascript %}
-{% endblock %}
- 
 {% block header %}
 {% include 'WenwenFrontendBundle:Components:_header.html.twig' %} 
 {% endblock %}
 
 {% block body %}
-<div class="main">
-	<div class="main-con-shopList">
-		<div class="main-con-left">
-			{% include 'WenwenFrontendBundle:Advertisement:_shopSearch.html.twig' with {'form': filter_form } %}
-        	{% include 'WenwenFrontendBundle:Advertisement:_shopCategory.html.twig' %}
-		</div>
-		<div class="main-con-right">
-			<div class="shopList-con">
-				{% include 'WenwenFrontendBundle:Advertisement:_shopSearchByLetter.html.twig' %}
-				{% include "WenwenFrontendBundle:Advertisement:_shopPage.html.twig" %}
-				<div class="page-wrapper">
-					{% include "WenwenFrontendBundle:Components:_pageNavs.html.twig" %}
-				</div>
+<div class="main-con-shopList">
+	<div class="main-con-left">
+		{% include 'WenwenFrontendBundle:Advertisement:_shopSearch.html.twig' with {'form': filter_form } %}
+    	{% include 'WenwenFrontendBundle:Advertisement:_shopCategory.html.twig' %}
+	</div>
+	<div class="main-con-right">
+		<div class="shopList-con">
+			{% include 'WenwenFrontendBundle:Advertisement:_shopSearchByLetter.html.twig' %}
+			{% include "WenwenFrontendBundle:Advertisement:_shopPage.html.twig" %}
+			<div class="page-wrapper">
+				{% include "WenwenFrontendBundle:Components:_pageNavs.html.twig" %}
 			</div>
 		</div>
 	</div>
 </div>
-<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/advertisement/shopList')}}"></script>
 {% endblock %}
 
 {% block footer %}
 {% include 'WenwenFrontendBundle:Components:_footer.html.twig' %} 
+{% endblock %}
+
+{% block javascript %}
+<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/advertisement/shopList')}}"></script>
 {% endblock %}
