--- a/src/Wenwen/FrontendBundle/Resources/views/Components/_headerNav.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Components/_headerNav.html.twig
@@ -10,15 +10,18 @@
             <a href="{{ path('wenwen_frontend_home_home') }}" title="首页" {{ router_current == 'wenwen_frontend_home_home' ? 'class="first active"':'class="first"' }}>首页</a>
             <a href="{{ path('wenwen_frontend_survey_index') }}" title="问卷列表" {{ router_current == 'wenwen_frontend_survey_index' ? 'class="active"':'' }}>问卷列表</a>
             <a href="{{ path('wenwen_frontend_vote_index') }}" title="快速问答" {{ router_current == 'wenwen_frontend_vote_index' ? 'class="active"':'' }}>快速问答</a>
-            <a href="{{ path('wenwen_frontend_advertisement_index') }}" title="体验广告" {{ router_current == 'wenwen_frontend_advertisement_index' ? 'class="active"':'' }}>体验广告</a>
+            {% if app.session.has('uid') %} 
+            <a href="{{ path('_advertiserment_list') }}" title="体验广告" {{ router_current == '_advertiserment_list' ? 'class="active"':'' }}>体验广告</a>
+            {% endif %}
             <a href="{{ path('wenwen_frontend_exchange_index') }}" title="兑换中心" {{ router_current == 'wenwen_frontend_exchange_index' ? 'class="active"':'' }}>兑换中心</a>
             <div class="border"></div>
         </div>
-        {% if app.session.has('uid') %} 
+        {% if app.session.has('uid') %}
+        {% else %}  
         <div class="login-btn right">
             <a href="{{ path('wenwen_frontend_user_register') }}" title="注册">注册</a>
             <a href="{{ path('wenwen_frontend_home_home') }}" title="登录">登录</a>
         </div>
-        {% endif %}
+        {% endif %} 
     </div>
 </div>
