--- a/src/Wenwen/FrontendBundle/Resources/views/Exception/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Exception/index.html.twig
@@ -1,11 +1,8 @@
 {% extends 'WenwenFrontendBundle::base.html.twig' %}
-{% block title %}{{ parent()  }} Test {% endblock %}
+{% block title %}出错啦：{{ parent() }} {% endblock %}
 
 {% block stylesheet %}
 <link href="{{ asset('css/404.css') }} " rel="stylesheet" type="text/css">
-{% endblock %}
-
-{% block javascript %}
 {% endblock %}
  
 {% block header %}
@@ -13,20 +10,21 @@
 {% endblock %}
 
 {% block body %}
-<div class="main">
-	<div class="main-about-con w1000 clearfix">
-		<div class="errorCon">
-			<div class="errorText">
-				<p class="txt">404错误，这个页面被大鲨鱼劫走了~</p>
-				<p class="btn"><a href="">返回首页</a><a href="">联系客服</a></p>
-			</div>
+<div class="main-about-con w1000 clearfix">
+	<div class="errorCon">
+		<div class="errorText">
+			<p class="txt">404错误，这个页面被大鲨鱼劫走了~</p>
+			<p class="btn"><a href="">返回首页</a><a href="">联系客服</a></p>
 		</div>
 	</div>
-	<div class="errorBot"></div>
 </div>
-<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/header')}}"></script>
+<div class="errorBot"></div>
 {% endblock %}
 
 {% block footer %}
 {% include 'WenwenFrontendBundle:Components:_footer.html.twig' %} 
+{% endblock %}
+
+{% block javascript %}
+<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/header')}}"></script>
 {% endblock %}
