--- a/src/Wenwen/FrontendBundle/Resources/views/Exchange/flowApply.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Exchange/flowApply.html.twig
@@ -1,11 +1,8 @@
 {% extends 'WenwenFrontendBundle::base.html.twig' %}
-{% block title %}{{ parent()  }} Test {% endblock %}
+{% block title %}手机流量兑换：{{ parent() }} {% endblock %}
 
 {% block stylesheet %}
 <link href="{{ asset('css/exchangeFlow.css') }} " rel="stylesheet" type="text/css">
-{% endblock %}
-
-{% block javascript %}
 {% endblock %}
  
 {% block header %}
@@ -13,66 +10,67 @@
 {% endblock %}
 
 {% block body %}
-<div class="main">
-	<div class="main-con w1000">
-		<div class="main-con-exchange form">
-			<h1>上网流量包兑换</h1>
-			<div class="main-con-exchangeInfo">
-				<form action="/exchange/mobileInfo" method="post" name="mobileInfo" id="form1">
-				<ul>
-					<li>
-						<label for="curMobile">手机号码：</label>
-						<span id="curMobile" class="cur"></span>
-					</li>
-					<li>
-						<label for="operator">运营商：</label>
-						<span id="operator" class="cur">联通</span>
-					</li>
-					<li>
-						<label for="location">归属地：</label>
-						<span id="location" class="cur">上海</span>
-					</li>
-					<li>
-						<label for="money">选择兑换流量：</label>
-						<span class="option">150M<div class="points">1650积分</div></span><span class="option">500M<div class="points">2380积分</div></span><span class="option">1024M<div class="points">3970积分</div></span>
-						<span id="money_succeed"></span>
-						<span id="money_error"></span>
-					</li>
-				</ul>
-				<div class="detail">
-					<div class="text">本次充值所需积分：<strong id="need">2050</strong>兑换后剩余积分：<strong id="rest">3028</strong></div>
-				</div>
-				<div class="btn"><a href="{{ path('wenwen_frontend_exchange_flowinfo') }}"><span class="return">返回</span></a><span id="mobile_save">提交</span></div>
-        		</form>
-        		<div class="tips">
-        			<div class="unicom">
-	        			<h3>中国联通用户充流量说明：</h3>
-	        			<p><em>●</em>生效时间：充值成功，短信提示后，立即生效。<br><em>●</em>使用范围：支持全国漫游。用户包括2G手机套餐（除北京、四川、河北、黑龙江、辽宁、广西、江西、天津、云南、吉林、安徽、海南）、3G手机套餐（不含20元预付费套餐）、4G手机套餐。<br><em>●</em>使用有效期：当月有效。<br><em>●</em>充值次数限制：单个号码每月每类包仅限充值3次。<br><em>●</em>温馨提醒：月末最后一天建议不要充值。</p>
-        			</div>
-        			<div class="mobile hide">
-	        			<h3>中国移动用户充流量说明：</h3>
-	                    <p><em>•</em>生效时间：充值成功，短信提示后，立即生效。<br/>
-	                    <em>•</em>使用范围：全国移动用户，全国漫游。<br/>
-	                    <em>•</em>使用有效期：当月有效。<br/>
-	                    <em>•</em>充值次数限制：单个号码每月仅限充值10次。<br/>
-	                    <em>•</em>温馨提醒：每月后三天不受理再次充值业务。<br/>
-	                    <em>•</em>售后说明：只要接收到10086短信就说明100%到账，各省目前查询方式不同，10086人工查询集团统付流量或退费减免可查到！（可致电400-6696-365索取具体查询方法），一旦充值不回退，充值失败不收费。</p>
-        			</div>
-        			<div class="telecom hide">
-	        			<h3>中国电信用户充流量说明：</h3>
-	                    <p><em>•</em>生效时间：充值成功，短信提示后，立即生效。<br/>
-	                    <em>•</em>使用范围：支持全国漫游（除陕西），全国电信用户均可充值。<br/>
-	                    <em>•</em>使用有效期：当月有效。<br/>
-	                    <em>•</em>温馨提醒：月末最后一天建议不要充值。</p>
-        			</div>
-        		</div>
-        	</div>
-		</div>
+<div class="main-con w1000">
+	<div class="main-con-exchange form">
+		<h1>上网流量包兑换</h1>
+		<div class="main-con-exchangeInfo">
+			<form action="/exchange/mobileInfo" method="post" name="mobileInfo" id="form1">
+			<ul>
+				<li>
+					<label for="curMobile">手机号码：</label>
+					<span id="curMobile" class="cur"></span>
+				</li>
+				<li>
+					<label for="operator">运营商：</label>
+					<span id="operator" class="cur">联通</span>
+				</li>
+				<li>
+					<label for="location">归属地：</label>
+					<span id="location" class="cur">上海</span>
+				</li>
+				<li>
+					<label for="money">选择兑换流量：</label>
+					<span class="option">150M<div class="points">1650积分</div></span><span class="option">500M<div class="points">2380积分</div></span><span class="option">1024M<div class="points">3970积分</div></span>
+					<span id="money_succeed"></span>
+					<span id="money_error"></span>
+				</li>
+			</ul>
+			<div class="detail">
+				<div class="text">本次充值所需积分：<strong id="need">2050</strong>兑换后剩余积分：<strong id="rest">3028</strong></div>
+			</div>
+			<div class="btn"><a href="{{ path('wenwen_frontend_exchange_flowinfo') }}"><span class="return">返回</span></a><span id="mobile_save">提交</span></div>
+    		</form>
+    		<div class="tips">
+    			<div class="unicom">
+        			<h3>中国联通用户充流量说明：</h3>
+        			<p><em>●</em>生效时间：充值成功，短信提示后，立即生效。<br><em>●</em>使用范围：支持全国漫游。用户包括2G手机套餐（除北京、四川、河北、黑龙江、辽宁、广西、江西、天津、云南、吉林、安徽、海南）、3G手机套餐（不含20元预付费套餐）、4G手机套餐。<br><em>●</em>使用有效期：当月有效。<br><em>●</em>充值次数限制：单个号码每月每类包仅限充值3次。<br><em>●</em>温馨提醒：月末最后一天建议不要充值。</p>
+    			</div>
+    			<div class="mobile hide">
+        			<h3>中国移动用户充流量说明：</h3>
+                    <p><em>•</em>生效时间：充值成功，短信提示后，立即生效。<br/>
+                    <em>•</em>使用范围：全国移动用户，全国漫游。<br/>
+                    <em>•</em>使用有效期：当月有效。<br/>
+                    <em>•</em>充值次数限制：单个号码每月仅限充值10次。<br/>
+                    <em>•</em>温馨提醒：每月后三天不受理再次充值业务。<br/>
+                    <em>•</em>售后说明：只要接收到10086短信就说明100%到账，各省目前查询方式不同，10086人工查询集团统付流量或退费减免可查到！（可致电400-6696-365索取具体查询方法），一旦充值不回退，充值失败不收费。</p>
+    			</div>
+    			<div class="telecom hide">
+        			<h3>中国电信用户充流量说明：</h3>
+                    <p><em>•</em>生效时间：充值成功，短信提示后，立即生效。<br/>
+                    <em>•</em>使用范围：支持全国漫游（除陕西），全国电信用户均可充值。<br/>
+                    <em>•</em>使用有效期：当月有效。<br/>
+                    <em>•</em>温馨提醒：月末最后一天建议不要充值。</p>
+    			</div>
+    		</div>
+    	</div>
 	</div>
 </div>
-<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/exchange/flowApply')}}"></script>
 {% endblock %}
 
 {% block footer %}
 {% include 'WenwenFrontendBundle:Components:_footer.html.twig' %} 
+{% endblock %}
+
+{% block javascript %}
+<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/exchange/flowApply')}}"></script>
 {% endblock %}
