--- a/src/Wenwen/FrontendBundle/Resources/views/Help/_banner.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Help/_banner.html.twig
@@ -1,6 +1,8 @@
 <div class="main-help-banner">
 	<div class="text w1000">
 		<div class="title"><a href="{{ path('_default_support') }}"><img src="{{ asset('img/help/title.png') }}" alt="帮助中心"></a><img src="{{ asset('img/help/titleE.png') }}" alt="Help Center" class="titleE"></div>
-		<div class="search"><input type="text" id="search" name="search"><label for="search">请输入关键字</label><div class="search-btn"></div></div>
+		<form method="get" action="/faq/search">
+		<div class="search"><input type="text" id="search" name="search" onfocus="this.value='';" onblur="if(this.value=='')this.value='请输入关键词';" value="请输入关键词"><div class="search-btn"></div></div>
+		</form>
 	</div>
 </div>
