--- a/src/Wenwen/FrontendBundle/Resources/views/Help/confirm.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Help/confirm.html.twig
@@ -1,5 +1,5 @@
 {% extends 'WenwenFrontendBundle::base.html.twig' %}
-{% block title %}{{ parent()  }} Test {% endblock %}
+{% block title %}意见反馈：{{ parent() }} {% endblock %}
 
 {% block stylesheet %}
 <link href="{{ asset('css/feedback.css') }} " rel="stylesheet" type="text/css">
@@ -18,7 +18,7 @@
 	<div class="main-help-con w1000">
 		<div class="main-help-feedback comfirm">
 			<h2>请确认您输入的内容，点击确认按钮。</h2>
-			<form action="">
+			<form action="/support/commit" method="post">
 			<table>
 				<tbody>
 					<tr>
