--- a/src/Wenwen/FrontendBundle/Resources/views/Help/finished.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Help/finished.html.twig
@@ -1,11 +1,8 @@
 {% extends 'WenwenFrontendBundle::base.html.twig' %}
-{% block title %}{{ parent()  }} Test {% endblock %}
+{% block title %}意见反馈：{{ parent() }} {% endblock %}
 
 {% block stylesheet %}
 <link href="{{ asset('css/feedback.css') }} " rel="stylesheet" type="text/css">
-{% endblock %}
-
-{% block javascript %}
 {% endblock %}
  
 {% block header %}
@@ -13,20 +10,21 @@
 {% endblock %}
 
 {% block body %}
-<div class="main">
-	{% include 'WenwenFrontendBundle:Help:_banner.html.twig' %}
-	<div class="main-help-con w1000">
-		<div class="main-help-feedback">
-			<div class="finished">
-				<p>感谢您的意见，我们的客服小问将根据您的问题，在24小时内联系您。</p>
-				<a href="{{ path('wenwen_frontend_home_home') }}">返回首页></a>
-			</div>
+{% include 'WenwenFrontendBundle:Help:_banner.html.twig' %}
+<div class="main-help-con w1000">
+	<div class="main-help-feedback">
+		<div class="finished">
+			<p>感谢您的意见，我们的客服小问将根据您的问题，在24小时内联系您。</p>
+			<a href="{{ path('wenwen_frontend_home_home') }}">返回首页></a>
 		</div>
 	</div>
 </div>
-<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/header')}}"></script>
 {% endblock %}
 
 {% block footer %}
 {% include 'WenwenFrontendBundle:Components:_footer.html.twig' %} 
+{% endblock %}
+
+{% block javascript %}
+<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/header')}}"></script>
 {% endblock %}
