--- a/src/Wenwen/FrontendBundle/Resources/views/Questionnaire/complete.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Questionnaire/complete.html.twig
@@ -1,11 +1,8 @@
 {% extends 'WenwenFrontendBundle::base.html.twig' %}
-{% block title %}{{ parent()  }} Test {% endblock %}
+{% block title %}问卷结束：{{ parent() }} {% endblock %}
 
 {% block stylesheet %}
 <link href="{{ asset('css/questionnaire.css') }} " rel="stylesheet" type="text/css">
-{% endblock %}
-
-{% block javascript %}
 {% endblock %}
  
 {% block header %}
@@ -13,31 +10,32 @@
 {% endblock %}
 
 {% block body %}
-<div class="main">
-    <div class="qnWrap">
-		<div class="qnCon qnEnd">
-			<div class="qnEndTxt clearfix">
-				<span class="left"><img src="{{ asset('img/questionnaire/normalface.png') }}"></span>
-				<span class="txt left"><h2>亲爱的用户！</h2>感谢您参加本次的问卷调查。积分会在调查结束后的3周内自动累计。</span>
-			</div>
-			<div class="qnEndRecommend">
-				<div class="tit">为您推荐其他的问卷</div>
-				<div class="list">
-					<table cellpadding="0" cellspacing="0">
-						<tbody>
-						<!-- 最多推荐3条问卷 -->
-							<tr><td>【生活】你愿意参加志愿活动吗？</td><td>时间：08/04 - 08/08</td><td>积分数：1</td><td><a class="answer" href="/vote/show/2830" class="quick_survey">投票&gt;&gt;</a></td></tr>
-							<tr><td>【生活】你愿意参加志愿活动吗？</td><td>时间：08/04 - 08/08</td><td>积分数：1</td><td><a class="answer" href="/vote/show/2830" class="quick_survey">投票&gt;&gt;</a></td></tr>
-							<tr><td>【生活】你愿意参加志愿活动吗？</td><td>时间：08/04 - 08/08</td><td>积分数：1</td><td><a class="answer" href="/vote/show/2830" class="quick_survey">投票&gt;&gt;</a></td></tr>
-						</tbody> 
-					</table>
-				</div>	
-			</div>
+<div class="qnWrap">
+	<div class="qnCon qnEnd">
+		<div class="qnEndTxt clearfix">
+			<span class="left"><img src="{{ asset('img/questionnaire/normalface.png') }}"></span>
+			<span class="txt left"><h2>亲爱的用户！</h2>感谢您参加本次的问卷调查。积分会在调查结束后的3周内自动累计。</span>
 		</div>
-		{% include 'WenwenFrontendBundle:Questionnaire:_footer.html.twig' %}
+		<div class="qnEndRecommend">
+			<div class="tit">为您推荐其他的问卷</div>
+			<div class="list">
+				<table cellpadding="0" cellspacing="0">
+					<tbody>
+					<!-- 最多推荐3条问卷 -->
+						<tr><td>【生活】你愿意参加志愿活动吗？</td><td>时间：08/04 - 08/08</td><td>积分数：1</td><td><a class="answer" href="/vote/show/2830" class="quick_survey">投票&gt;&gt;</a></td></tr>
+						<tr><td>【生活】你愿意参加志愿活动吗？</td><td>时间：08/04 - 08/08</td><td>积分数：1</td><td><a class="answer" href="/vote/show/2830" class="quick_survey">投票&gt;&gt;</a></td></tr>
+						<tr><td>【生活】你愿意参加志愿活动吗？</td><td>时间：08/04 - 08/08</td><td>积分数：1</td><td><a class="answer" href="/vote/show/2830" class="quick_survey">投票&gt;&gt;</a></td></tr>
+					</tbody> 
+				</table>
+			</div>	
+		</div>
 	</div>
+	{% include 'WenwenFrontendBundle:Questionnaire:_footer.html.twig' %}
 </div>
 {% endblock %}
 
 {% block footer %}
+{% endblock %}
+
+{% block javascript %}
 {% endblock %}
