--- a/src/Wenwen/FrontendBundle/Resources/views/Questionnaire/noComplete.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Questionnaire/noComplete.html.twig
@@ -1,43 +1,41 @@
 {% extends 'WenwenFrontendBundle::base.html.twig' %}
-{% block title %}{{ parent()  }} Test {% endblock %}
+{% block title %}问卷结束：{{ parent() }} {% endblock %}
 
 {% block stylesheet %}
 <link href="{{ asset('css/questionnaire.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
 
-{% block javascript %}
-{% endblock %}
- 
 {% block header %}
 {% include 'WenwenFrontendBundle:Components:_headerSimpleQ.html.twig' %} 
 {% endblock %}
 
 {% block body %}
-<div class="main">
-    <div class="qnWrap">
-		<div class="qnCon qnEnd">
-			<div class="qnEndTxt clearfix">
-				<span class="left"><img src="{{ asset('img/questionnaire/sadface.png') }}"></span>
-				<span class="txt left"><h2>亲爱的用户！</h2>感谢您参加本次的问卷调查。您不符合本次要求或者本次问卷调查名额已满。</span>
-				</div>
-				<div class="qnEndRecommend">
-				<div class="tit">为您推荐其他的问卷</div>
-				<div class="list">
-					<table cellpadding="0" cellspacing="0">
-						<tbody>
-						<!-- 最多推荐3条问卷 -->
-							<tr><td>【生活】你愿意参加志愿活动吗？</td><td>时间：08/04 - 08/08</td><td>积分数：1</td><td><a class="answer" href="/vote/show/2830" class="quick_survey">投票&gt;&gt;</a></td></tr>
-							<tr><td>【生活】你愿意参加志愿活动吗？</td><td>时间：08/04 - 08/08</td><td>积分数：1</td><td><a class="answer" href="/vote/show/2830" class="quick_survey">投票&gt;&gt;</a></td></tr>
-							<tr><td>【生活】你愿意参加志愿活动吗？</td><td>时间：08/04 - 08/08</td><td>积分数：1</td><td><a class="answer" href="/vote/show/2830" class="quick_survey">投票&gt;&gt;</a></td></tr>
-						</tbody> 
-					</table>
-				</div>	
+<div class="qnWrap">
+	<div class="qnCon qnEnd">
+		<div class="qnEndTxt clearfix">
+			<span class="left"><img src="{{ asset('img/questionnaire/sadface.png') }}"></span>
+			<span class="txt left"><h2>亲爱的用户！</h2>感谢您参加本次的问卷调查。您不符合本次要求或者本次问卷调查名额已满。</span>
 			</div>
+			<div class="qnEndRecommend">
+			<div class="tit">为您推荐其他的问卷</div>
+			<div class="list">
+				<table cellpadding="0" cellspacing="0">
+					<tbody>
+					<!-- 最多推荐3条问卷 -->
+						<tr><td>【生活】你愿意参加志愿活动吗？</td><td>时间：08/04 - 08/08</td><td>积分数：1</td><td><a class="answer" href="/vote/show/2830" class="quick_survey">投票&gt;&gt;</a></td></tr>
+						<tr><td>【生活】你愿意参加志愿活动吗？</td><td>时间：08/04 - 08/08</td><td>积分数：1</td><td><a class="answer" href="/vote/show/2830" class="quick_survey">投票&gt;&gt;</a></td></tr>
+						<tr><td>【生活】你愿意参加志愿活动吗？</td><td>时间：08/04 - 08/08</td><td>积分数：1</td><td><a class="answer" href="/vote/show/2830" class="quick_survey">投票&gt;&gt;</a></td></tr>
+					</tbody> 
+				</table>
+			</div>	
 		</div>
-		{% include 'WenwenFrontendBundle:Questionnaire:_footer.html.twig' %}
 	</div>
+	{% include 'WenwenFrontendBundle:Questionnaire:_footer.html.twig' %}
 </div>
 {% endblock %}
 
 {% block footer %}
+{% endblock %}
+
+{% block javascript %}
 {% endblock %}
