--- a/src/Wenwen/FrontendBundle/Resources/views/User/active.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/User/active.html.twig
@@ -1,11 +1,8 @@
 {% extends 'WenwenFrontendBundle::base.html.twig' %}
-{% block title %}{{ parent()  }} Test {% endblock %}
+{% block title %}激活：{{ parent() }} {% endblock %}
 
 {% block stylesheet %}
 <link href="{{ asset('css/register.css') }} " rel="stylesheet" type="text/css">
-{% endblock %}
-
-{% block javascript %}
 {% endblock %}
  
 {% block header %}
@@ -13,7 +10,7 @@
 {% endblock %}
 
 {% block body %}
-<div class="main w1000">
+<div class="main-con w1000">
 	<div class="main-register-active">
 		<div class="con">
 			<div class="text">
@@ -35,9 +32,12 @@
 		</div>
 	</div>
 </div>
-<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/header')}}"></script>
 {% endblock %}
 
 {% block footer %}
 {% include 'WenwenFrontendBundle:Components:_footerCopyright.html.twig' %} 
+{% endblock %}
+
+{% block javascript %}
+<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/header')}}"></script>
 {% endblock %}
