--- a/src/Wenwen/FrontendBundle/Resources/views/User/qq.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/User/qq.html.twig
@@ -1,11 +1,8 @@
 {% extends 'WenwenFrontendBundle::base.html.twig' %}
-{% block title %}{{ parent()  }} Test {% endblock %}
+{% block title %}QQ登录：{{ parent() }} {% endblock %}
 
 {% block stylesheet %}
 <link href="{{ asset('css/register.css') }} " rel="stylesheet" type="text/css">
-{% endblock %}
-
-{% block javascript %}
 {% endblock %}
  
 {% block header %}
@@ -13,13 +10,16 @@
 {% endblock %}
 
 {% block body %}
-<div class="main w1000">
+<div class="main-con w1000">
     <h1>以注册页面示例</h1>
     <p>1、头部的css每个页面对应一个<br/>2、底部的js每个页面对应写入名字</p>
 </div>
-<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/user/register')}}"></script>
 {% endblock %}
 
 {% block footer %}
 {% include 'WenwenFrontendBundle:Components:_footerCopyright.html.twig' %} 
+{% endblock %}
+
+{% block javascript %}
+<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/user/register')}}"></script>
 {% endblock %}
