--- a/src/Wenwen/FrontendBundle/Resources/views/User/resetPwd.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/User/resetPwd.html.twig
@@ -1,11 +1,8 @@
 {% extends 'WenwenFrontendBundle::base.html.twig' %}
-{% block title %}{{ parent()  }} Test {% endblock %}
+{% block title %}找回密码：{{ parent() }} {% endblock %}
 
 {% block stylesheet %}
 <link href="{{ asset('css/resetPwd.css') }} " rel="stylesheet" type="text/css">
-{% endblock %}
-
-{% block javascript %}
 {% endblock %}
  
 {% block header %}
@@ -13,7 +10,7 @@
 {% endblock %}
 
 {% block body %}
-<div class="main w1000">
+<div class="main-con w1000">
 	<div class="form main-resetPwd">
 		<div class="step2">
 			<div class="steps"><span class="pass">1 输入邮箱地址</span><span class="active">2 重置密码</span><span class="last">3 完成</span></div>
@@ -35,9 +32,12 @@
 		</div>
 	</div>
 </div>
-<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/user/resetPwd')}}"></script>
 {% endblock %}
 
 {% block footer %}
 {% include 'WenwenFrontendBundle:Components:_footerCopyright.html.twig' %} 
+{% endblock %}
+
+{% block javascript %}
+<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/user/resetPwd')}}"></script>
 {% endblock %}
