--- a/src/Wenwen/FrontendBundle/Resources/views/User/resetSuccess.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/User/resetSuccess.html.twig
@@ -1,19 +1,16 @@
 {% extends 'WenwenFrontendBundle::base.html.twig' %}
-{% block title %}{{ parent()  }} Test {% endblock %}
+{% block title %}找回密码：{{ parent() }} {% endblock %}
 
 {% block stylesheet %}
 <link href="{{ asset('css/resetPwd.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
 
-{% block javascript %}
-{% endblock %}
- 
 {% block header %}
 {% include 'WenwenFrontendBundle:Components:_headerSimple.html.twig' %} 
 {% endblock %}
 
 {% block body %}
-<div class="main w1000">
+<div class="main-con w1000">
 	<div class="form main-resetPwd">
 		<div class="step3">
 			<div class="steps"><span>1 输入邮箱地址</span><span class="pass">2 重置密码</span><span class="last active">3 完成</span></div>
@@ -23,9 +20,12 @@
 		</div>
 	</div>
 </div>
-<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/header')}}"></script>
 {% endblock %}
 
 {% block footer %}
 {% include 'WenwenFrontendBundle:Components:_footerCopyright.html.twig' %} 
+{% endblock %}
+
+{% block javascript %}
+<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/header')}}"></script>
 {% endblock %}
