--- a/src/Wenwen/FrontendBundle/Resources/views/Vote/suggest.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Vote/suggest.html.twig
@@ -1,59 +1,57 @@
 {% extends 'WenwenFrontendBundle::base.html.twig' %}
-{% block title %}{{ parent()  }} Test {% endblock %}
+{% block title %}快速问答出题：{{ parent() }} {% endblock %}
 
 {% block stylesheet %}
 <link href="{{ asset('css/suggest.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
 
-{% block javascript %}
-{% endblock %}
- 
 {% block header %}
 {% include 'WenwenFrontendBundle:Components:_header.html.twig' %} 
 {% endblock %}
 
 {% block body %}
-<div class="main">
-	<div class="main-con w1000 clearfix">
-		<div class="main-con-suggest">
-			<h1>现在，您将成为出题者！</h1>
-			<div class="abstract">
-				<p><em>●</em>每个人都是社会的决策者，现在开始您将有机会成为91问问调查网“快速问答”栏目的出题者。</p>
-				<p><em>●</em>您可以提供您感兴趣的话题，征询广大91问问网友的意见，热点新闻，社会话题，甚至当你犹豫不决该买哪个产品，都可以成为“快速问答”的主题。</p>
-				<p><em>●</em>一旦您提供的“快速问答”被采用，您将获得<strong>200积分</strong>的奖励，并且您的名字将显示在该题“出题者”一栏，让更多91问问的网友来认识你！</p>
-			</div>
-			<div class="form">
-				<form action="" id="suggest_form" method="post" onsubmit="return false;">
-					<ul>
-						<li><label for="title">标题：</label><input type="text" id="title" name="title"><span id="title_succeed"></span><span id="title_error"></span></li>
-						<li><label for="content">相关说明及描述：</label><textarea id="content" name="content"></textarea><span id="content_succeed"></span><span id="content_error"></span></li>
-						<li><label for="option1">选项1：</label><input type="text" id="option1" name="option1" class="option"><span id="option1_succeed"></span><span id="option1_error"></span></li>
-						<li><label for="option2">选项2：</label><input type="text" id="option2" name="option2" class="option"></li>
-						<li><label for="option3">选项3：</label><input type="text" id="option3" name="option3" class="option"></li>
-						<li><label for="option4">选项4：</label><input type="text" id="option4" name="option4" class="option"></li>
-						<li><label for="option5">选项5：</label><input type="text" id="option5" name="option5" class="option"></li>
-						<li><label for="option6">选项6：</label><input type="text" id="option6" name="option6" class="option"></li>
-						<li><label for="option7">选项7：</label><input type="text" id="option7" name="option7" class="option"></li>
-						<li><label for="option8">选项8：</label><input type="text" id="option8" name="option8" class="option"></li>
-						<li><label for="option9">选项9：</label><input type="text" id="option9" name="option9" class="option"></li>
-						<li><label for="option10">选项10：</label><input type="text" id="option10" name="option10" class="option"></li>
-					</ul>
-					<div class="btn"><span id="suggest_save">提交</span></div>
-				</form>
-			</div>
-			<div class="tips">
-				<div>注意事项：</div>
-					<p>1. 请勿提交任何涉及政治、暴力、色情等违法信息；恶意提交不法信息者，将被封号！<br>
-					2. 如果被采用，91问问保留适当修改您提供的内容的权利；<br>
-					3. 同一主题请勿重复提交；重复提交并不会提高您的题目被采用的几率，合适的主题才更容易被采用！<br>
-					4. 所有“快速问答”均为<strong>单选题</strong>，请注意考虑选项的逻辑性，考虑是否便于回答者理解和做出适当选择；</p>
-			</div>
+<div class="main-con w1000 clearfix">
+	<div class="main-con-suggest">
+		<h1>现在，您将成为出题者！</h1>
+		<div class="abstract">
+			<p><em>●</em>每个人都是社会的决策者，现在开始您将有机会成为91问问调查网“快速问答”栏目的出题者。</p>
+			<p><em>●</em>您可以提供您感兴趣的话题，征询广大91问问网友的意见，热点新闻，社会话题，甚至当你犹豫不决该买哪个产品，都可以成为“快速问答”的主题。</p>
+			<p><em>●</em>一旦您提供的“快速问答”被采用，您将获得<strong>200积分</strong>的奖励，并且您的名字将显示在该题“出题者”一栏，让更多91问问的网友来认识你！</p>
+		</div>
+		<div class="form">
+			<form action="" id="suggest_form" method="post" onsubmit="return false;">
+				<ul>
+					<li><label for="title">标题：</label><input type="text" id="title" name="title"><span id="title_succeed"></span><span id="title_error"></span></li>
+					<li><label for="content">相关说明及描述：</label><textarea id="content" name="content"></textarea><span id="content_succeed"></span><span id="content_error"></span></li>
+					<li><label for="option1">选项1：</label><input type="text" id="option1" name="option1" class="option"><span id="option1_succeed"></span><span id="option1_error"></span></li>
+					<li><label for="option2">选项2：</label><input type="text" id="option2" name="option2" class="option"></li>
+					<li><label for="option3">选项3：</label><input type="text" id="option3" name="option3" class="option"></li>
+					<li><label for="option4">选项4：</label><input type="text" id="option4" name="option4" class="option"></li>
+					<li><label for="option5">选项5：</label><input type="text" id="option5" name="option5" class="option"></li>
+					<li><label for="option6">选项6：</label><input type="text" id="option6" name="option6" class="option"></li>
+					<li><label for="option7">选项7：</label><input type="text" id="option7" name="option7" class="option"></li>
+					<li><label for="option8">选项8：</label><input type="text" id="option8" name="option8" class="option"></li>
+					<li><label for="option9">选项9：</label><input type="text" id="option9" name="option9" class="option"></li>
+					<li><label for="option10">选项10：</label><input type="text" id="option10" name="option10" class="option"></li>
+				</ul>
+				<div class="btn"><span id="suggest_save">提交</span></div>
+			</form>
+		</div>
+		<div class="tips">
+			<div>注意事项：</div>
+				<p>1. 请勿提交任何涉及政治、暴力、色情等违法信息；恶意提交不法信息者，将被封号！<br>
+				2. 如果被采用，91问问保留适当修改您提供的内容的权利；<br>
+				3. 同一主题请勿重复提交；重复提交并不会提高您的题目被采用的几率，合适的主题才更容易被采用！<br>
+				4. 所有“快速问答”均为<strong>单选题</strong>，请注意考虑选项的逻辑性，考虑是否便于回答者理解和做出适当选择；</p>
 		</div>
 	</div>
 </div>
-<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/vote/suggest')}}"></script>
 {% endblock %}
 
 {% block footer %}
 {% include 'WenwenFrontendBundle:Components:_footer.html.twig' %} 
 {% endblock %}
+
+{% block javascript %}
+<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/vote/suggest')}}"></script>
+{% endblock %} 
