--- a/web/css/layout/common-simple.css
+++ b/web/css/layout/common-simple.css
@@ -1,23 +1,32 @@
 .w100 {
-  width: 100%; }
+  width: 100%;
+}
 
 .w1000 {
   width: 1000px;
-  margin: 0 auto; }
+  margin: 0 auto;
+}
 
 .left {
-  float: left; }
+  float: left;
+}
 
 .right {
-  float: right; }
+  float: right;
+}
 
 body {
   font-family: "Microsoft YaHei", Tohoma, Arial;
   font-size: 12px;
   background: #f2f3f5;
-  color: #333; }
+  color: #333;
+}
 
 .main {
   margin-top: 20px;
+}
+
+.main-con {
   background: #fff;
-  border: 1px solid #ebedf2; }
+  border: 1px solid #ebedf2;
+}
