--- a/web/sass/shopDetail.scss
+++ b/web/sass/shopDetail.scss
@@ -2,6 +2,7 @@
 
 @import "layout/common";
 @import "layout/header";
+@import "component/crumbs";
 .main-con-shopDetail{
 	padding: 5px 0;
 	@extend .clearfix;
